# mondaybot

./: Cargo.toml  README.md
.beads/: deletions.jsonl  issues.jsonl
src/: beads.rs  config.rs  main.rs  output.rs
src/api/: client.rs  queries.rs  types.rs
src/commands/: boards.rs  doctor.rs  items.rs  link.rs  mod.rs  setup.rs  subitems.rs  sync_cmd.rs
src/sync/: columns.rs  mapping.rs  mod.rs  pull.rs  push.rs  update.rs
